feat(device) detect new brand Gretel model: GT6000, A6, A7 feat(device) detect brand 3GO model: Aplay 4 feat(device) detect brand Alcatel model: One Touch POP 7S (P330X) feat(device) detect brand Acer model: Aspire 4349 feat(device) detect brand ThL model: T200 feat(device) detect brand Haier model: W867 feat(device) detect brand Highscreen model: Prime S feat(device) detect brand UMIDIGI model: London feat(device) detect brand Meizu model: M3 Max feat(device) detect brand DEXP model: Ixion M445 Onyx 2 feat(device) detect brand Beeline model: Smart 8 A239s feat(device) detect brand Jinga models: Joy Pro, Fresh, A450

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1274,9 +1274,9 @@ Bravis:
       device: 'tablet'
 
 
-# Acer
+# Acer (acer.com)
 Acer:
-  regex: 'acer|(?<!Satellite |ZTE BLADE |ImSmart |ERGO |X-Style Tab )a(?:101|110|2[10]0|211|50[10]|51[10]|70[10])(?:[);/ ]|$)|Android.*V3[67]0(?:[);/ ]|$)|Android.*Z1[23456]0 Build|Android.*Z5\d{2} Build|Android.*T0[234678] Build|Android.*S55(?:[);/ ]|$)|(?:A1-(713(HD)?|7[23]4|830|841|840FHD|81[01])|A3-A[1234][01]|B1-(7[1235-8][01](HD)?|7[23]3|7A0|8[1235]0|A71|860A)|TPA60W|B3-(A[125]0|A3[02]|A40FHD)|E39)(?:[);/ ]|$)|S5[12]0 Build|(DA[0-9]+HQ?L|Aspire (?:V5-121|XC-704G|V5-573G)|Chromebook 14 \(CB3-431\)|Predator G9-793|GT-810|B1-870|B3-A4[02]|B3-A50FHD)(?:[);/ ]|$)'
+  regex: 'acer|(?<!Satellite |ZTE BLADE |ImSmart |ERGO |X-Style Tab )a(?:101|110|2[10]0|211|50[10]|51[10]|70[10])(?:[);/ ]|$)|Android.*V3[67]0(?:[);/ ]|$)|Android.*Z1[23456]0 Build|Android.*Z5\d{2} Build|Android.*T0[234678] Build|Android.*S55(?:[);/ ]|$)|(?:A1-(713(HD)?|7[23]4|830|841|840FHD|81[01])|A3-A[1234][01]|B1-(7[1235-8][01](HD)?|7[23]3|7A0|8[1235]0|A71|860A)|TPA60W|B3-(A[125]0|A3[02]|A40FHD)|E39)(?:[);/ ]|$)|S5[12]0 Build|(DA[0-9]+HQ?L|Aspire (?:V5-121|XC-704G|V5-573G|4349)|Chromebook 14 \(CB3-431\)|Predator G9-793|GT-810|B1-870|B3-A4[02]|B3-A50FHD)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     # smart displays
@@ -1411,7 +1411,7 @@ Acer:
     - regex: '(?:Acer )?(Chromebook 14)'
       model: '$1'
       device: 'desktop'
-    - regex: '(Aspire (?:V5-121|XC-704G|V5-573G|A515-51G))'
+    - regex: '(Aspire (?:V5-121|XC-704G|V5-573G|A515-51G|4349))'
       model: '$1'
       device: 'desktop'
     - regex: '(Predator G9-793|Aspire E5-511)'
@@ -1548,7 +1548,7 @@ Arian Space:
 
 # Alcatel (alcatelmobile.com)
 Alcatel:
-  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGXTL]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|4087U|5001[ADJTU]|5002[ADFH]|5003[ADGU]|5006D|5007[AU]|5008[ADUYT]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJF]|5025[DEG]|5026[ADJ]|5027B|5028[AYD]|5029[EYD]|5030[DE]|5032W|5033[AEFXDJGMOTXYQS]|5034D|5036D|5038[ADEX]|5039[DY]|5041[CD]|5042[ADEFGWXT]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AYUI]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[ADKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADJXYZIST]|5060[ADJ]|5061[KU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI]|5116J|5145A|6016[ADEX]|6025H|6036[AXY]|6037[BKY]|6039[AHJKY]|6042D|6043[AD]|6044D|6045[BFIKOYX]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060[SX]|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|7071[ADX]|8030Y|8050[DEGX]|8063|8088[XQM]|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9009G|9010X|9020A|9022X|9027[QFTWX]|9029Z|9203A|A(?:464BG|570BL|50[13]DL|57[17]VL|574BL)|I213|I216[AX]|(?<!\.)80(?:82|6[78])|A576CC)(?:_(?:EEA|RU))?|P360X)(?:[);/ ]|$)'
+  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|TIMXL|(?:(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGXTL]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|A621BL|4114E|4087U|5001[ADJTU]|5002[ADFH]|5003[ADGU]|5006D|5007[AU]|5008[ADUYT]|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJF]|5025[DEG]|5026[ADJ]|5027B|5028[AYD]|5029[EYD]|5030[DE]|5032W|5033[AEFXDJGMOTXYQS]|5034D|5036D|5038[ADEX]|5039[DY]|5041[CD]|5042[ADEFGWXT]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048[AYUI]|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[ADY]|5053[ADKY]|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY]|5059[ADJXYZIST]|5060[ADJ]|5061[KU]|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI]|5116J|5145A|6016[ADEX]|6025H|6036[AXY]|6037[BKY]|6039[AHJKY]|6042D|6043[AD]|6044D|6045[BFIKOYX]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060[SX]|6062W|6070K|7040[ADEFKRT]|7041[DX]|7042A|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7053D|7055A|7070X|7071[ADX]|8030Y|8050[DEGX]|8063|8088[XQM]|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9009G|9010X|9020A|9022X|9027[QFTWX]|9029Z|9203A|A(?:464BG|570BL|50[13]DL|57[17]VL|574BL)|I213|I216[AX]|(?<!\.)80(?:82|6[78])|A576CC)(?:_(?:EEA|RU))?|P3[36]0X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '4087U'
@@ -1811,6 +1811,9 @@ Alcatel:
       device: 'tablet'
     - regex: 'P310X'
       model: 'One Touch POP 7'
+      device: 'tablet'
+    - regex: 'P330X'
+      model: 'One Touch POP 7S'
       device: 'tablet'
     - regex: '9020A'
       model: 'One Touch Trek HD'
@@ -3430,7 +3433,7 @@ Becker:
 
 # Beeline
 Beeline:
-  regex: 'Beeline'
+  regex: 'Beeline|A239s(?:[);/]|$)'
   device: 'smartphone'
   models:
     - regex: 'Beeline[_ ]Pro[_ ]([2436])'
@@ -3454,6 +3457,8 @@ Beeline:
       model: 'Fast 2'
     - regex: 'Fast(?:[);/ ]|$)'
       model: 'Fast'
+    - regex: 'A239s(?:[);/ ]|$)'
+      model: 'Smart 8 A239s'
 
 # Beetel
 Beetel:
@@ -4802,7 +4807,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|S(?:3[78]0|2[89]0)|AL(?:[12]40|[23]50)|AS(?:155|[12]60)| (?:N280i|P380i|R110|E210|A160|B450|B340|B35[05]|T155|A1[45]0|A340|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[34]55|H170|P510|L2[17]0))(?:[);/ ]|$)'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|Larus_TV1|Ixion(?:ML4.7|ES250)|M150Storm|(?:SENIOR|F4[38]D8000K|VA(?:[12]10|170)|ML450|MS[56]50|BL(?:[123]50|160|155)|BS(?:155|160|[1256]50)|S(?:3[78]0|2[89]0)|AL(?:[12]40|[23]50)|AS(?:155|[12]60)| (?:N280i|P380i|R110|E210|B(?:450|340|35[05])|M445|T155|A(?:1[456]0|340)|GS15[035]|GL[23]55|G25[05]|G15[05]|ES750|XL150|Z[34]55|H170|P510|L2[17]0))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Ixion[_ ]([^;/]+)(?: Build|\))'
@@ -4815,6 +4820,8 @@ DEXP:
       model: 'Ixion ML 4.7"'
     - regex: 'M150Storm(?:[);/ ]|$)'
       model: 'Ixion M150 Storm'
+    - regex: 'M445(?:[);/ ]|$)'
+      model: 'Ixion M445 Onyx 2'
     - regex: 'AL250(?:[);/ ]|$)'
       model: '4.5" AL250'
     - regex: 'AL350(?:[);/ ]|$)'
@@ -6687,7 +6694,7 @@ Hafury:
 
 # Haier
 Haier:
-  regex: 'Haier|I6_Infinity|Titan[ _]T[135]|(?:HW-)?W(?:71[67]|757|860|970)(?:[);/ ]|$)|S5 Silk|(?:HM-)?(N505|N700|G(?:152|303|353|552|70[01])?-FL|HM-N501-FL|G(?:303)?-W|I(?:557)?-FL)|(?:PAD[ _](?:D71|G781|d85))|A2_Lite_NFC'
+  regex: 'Haier|I6_Infinity|Titan[ _]T[135]|(?:HW-)?W(?:71[67]|757|86[07]|970)(?:[);/ ]|$)|S5 Silk|(?:HM-)?(N505|N700|G(?:152|303|353|552|70[01])?-FL|HM-N501-FL|G(?:303)?-W|I(?:557)?-FL)|(?:PAD[ _](?:D71|G781|d85))|A2_Lite_NFC'
   device: 'smartphone'
   models:
     - regex: 'A2_Lite_NFC'
@@ -6704,7 +6711,7 @@ Haier:
       model: '$1'
     - regex: '(Titan[_ ]T[135]|I6_Infinity)'
       model: '$1'
-    - regex: '(?:HW-)?W(71[67]|757|860|970)(?:[);/ ]|$)'
+    - regex: '(?:HW-)?W(71[67]|757|86[07]|970)(?:[);/ ]|$)'
       model: 'W$1'
     - regex: 'PAD[ -_](D71|G781|d85)'
       device: 'tablet'
@@ -10804,7 +10811,7 @@ Fourel:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO [567]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|MZ-16 X)(?:[);/ ]|$)'
+  regex: 'Meizu|MZ-[a-z]|(?<!POCO )(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M3 Max|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO [567]|PRO 7-[HS]| 15 Lite| 16th|MZ-15 (?:Lite|Plus)|MZ-16 X)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -10875,6 +10882,8 @@ Meizu:
       model: '16th Plus'
     - regex: 'MZ-15 Plus(?:[);/ ]|$)'
       model: '15 Plus'
+    - regex: 'M3 Max(?:[);/ ]|$)'
+      model: 'M3 Max'
     - regex: '(?:MZ-15 Lite| 15 Lite)(?:[);/ ]|$)'
       model: '15 Lite'
     - regex: 'MZ-16th| 16th(?:[);/ ]|$)'
@@ -16463,12 +16472,14 @@ Telit:
 
 # ThL
 ThL:
-  regex: 'ThL[ _-]|Knight 2|THL5000'
+  regex: 'ThL[ _-]|(?:Knight 2|THL5000|T200)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Knight 2'
       model: 'Knight 2'
     - regex: 'THL ?(5000)'
+      model: '$1'
+    - regex: '(T200)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'ThL[ _-]*([^;/]+) Build'
       model: '$1'
@@ -16744,7 +16755,7 @@ Ulefone:
 
 # UMIDIGI or UMI
 UMIDIGI:
-  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE)(?:[;/) ]|$)'
+  regex: 'UMI(?:DIGI)?[ _]|(?:A5_Pro|ROME[_ ]X|BISON|hammer_S|S2 LITE|London)(?:[;/) ]|$)'
   device: 'smartphone'
   models:
     - regex: 'A5_Pro'
@@ -16763,7 +16774,7 @@ UMIDIGI:
       model: 'Super'
     - regex: 'S2 LITE'
       model: 'S2 Lite'
-    - regex: 'UMI_(London|Diamond(?:_X)?)'
+    - regex: '(?:UMI_)?(London|Diamond(?:_X)?)'
       model: '$1'
     - regex: 'UMI(?:DIGI)?[ _]([^/;)]+)(?: Build|[;)])'
       model: '$1'
@@ -19587,7 +19598,7 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ](?:Power|F)|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ matrixstyle _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|Fest(?:XL)?(?:-Pro)?|Tasty|Boost3|Boost 3(?: Pro)? SE|Expanse|Hercules|Alpha Rage|VergeM|Ice2|Prime L|Spade|Spark 2|Alpha GTR|Wallet)(?:[);/ ]|$)'
+  regex: 'HIGHSCREEN|(Easy[- ]Power(?:[- ]Pro)?|Pure[_ ](?:Power|F)|Power Ice(?: Max)?|Easy[_ ]([SFL]|XL)(?:_Pro)?|Razar_Pro|Power Rage(?: Evo)?|Zera-S-Power|Zera[ _][UFS]|Power[ _]?Five[ matrixstyle _]?(?:Pro|Evo|Max|Max(?:Lite|2))|PowerFour|BOOST II(?:se)?|Fest(?:XL)?(?:-Pro)?|Tasty|Boost3|Boost 3(?: Pro)? SE|Expanse|Hercules|Alpha Rage|VergeM|Ice2|Prime [LS]|Spade|Spark 2|Alpha GTR|Wallet)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS]|Alpha GTR|Wallet)(?:[);/ ]|$)'
@@ -19658,8 +19669,8 @@ Highscreen:
       model: 'Alpha Rage'
     - regex: 'Ice2(?:[);/ ]|$)'
       model: 'Ice 2'
-    - regex: 'Prime L(?:[);/ ]|$)'
-      model: 'Prime L'
+    - regex: 'Prime ([LS])(?:[);/ ]|$)'
+      model: 'Prime $1'
 
 # CVTE
 CVTE:
@@ -20276,12 +20287,12 @@ Droxio:
 
 # 3GO (www.3go.es)
 3GO:
-  regex: '(?:DROXIO (?:C40|A47|B45|KENTIA)|Aplay 3)(?:[);/ ]|$)'
+  regex: '(?:Aplay ?[34])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
-    - regex: 'Aplay 3'
+    - regex: 'Aplay ?([34])'
       device: 'tablet'
-      model: 'Aplay 3'
+      model: 'Aplay $1'
 
 # Goophone
 Goophone:
@@ -21032,7 +21043,7 @@ TurboKids:
 
 # Jinga (jinga.ru)
 Jinga:
-  regex: 'Jinga[-_ ]|(?:(?:Fresh|Optim)4G|Pass(?:Plus|3G)|PicassoNote|Hotz[_ ]M1|WinPRO|Touch4G|Start(?:3G|LTE)?|IGO[ _]L[41]|Basco (?:L3|L[45]00|XS1|S2)|M500-1|Hit4G|Neon(?!/))(?:[);/ ]|$)'
+  regex: 'Jinga[-_ ]|(?:(?:Fresh|Optim)4G|Pass(?:Plus|3G)|PicassoNote|Hotz[_ ]M1|WinPRO|Touch4G|Start(?:3G|LTE)?|IGO[ _]L[41]|Basco (?:L3|L[45]00|XS1|S2)|M500-1|Hit4G|A450|Neon(?!/)|JoyPRO|Fresh)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'Optim4G(?:[);/ ]|$)'
@@ -21047,8 +21058,8 @@ Jinga:
       model: 'Pass Plus'
     - regex: 'Pass3G(?:[);/ ]|$)'
       model: 'Pass 3G'
-    - regex: 'WinPRO(?:[);/ ]|$)'
-      model: 'Win Pro'
+    - regex: '(Win|Joy)PRO(?:[);/ ]|$)'
+      model: '$1 Pro'
     - regex: 'Touch4G(?:[);/ ]|$)'
       model: 'Touch 4G'
     - regex: 'Start3G(?:[);/ ]|$)'
@@ -21061,6 +21072,8 @@ Jinga:
       model: 'Picasso Note'
     - regex: 'Jinga Iron(?:[);/ ]|$)'
       model: 'Iron'
+    - regex: 'Fresh(?:[);/ ]|$)'
+      model: 'Fresh'
     - regex: 'Jinga Basco neo(?:[);/ ]|$)'
       model: 'Basco Neo'
     - regex: 'M500-1(?:[);/ ]|$)'
@@ -21073,7 +21086,7 @@ Jinga:
       model: 'IGO L2'
     - regex: '(?:JINGA[_ ])?IGO[_ ]([ML]1|L4)(?:[);/ ]|$)'
       model: 'IGO $1'
-    - regex: '(?:JINGA[_ ])?(Neon)(?:[);/ ]|$)'
+    - regex: '(?:JINGA[_ ])?(Neon|A450)(?:[);/ ]|$)'
       model: '$1'
     - regex: 'Jinga Trezor S1 Plus(?:[);/ ]|$)'
       model: 'Trezor S1 Plus'
@@ -23278,6 +23291,16 @@ Greentel:
   models:
     - regex: 'X1_Light_Lte'
       model: 'X1 Light LTE'
+
+# Gretel:
+Gretel:
+ regex: 'Gretel|(?:GT6000)(?:[);/ ]|$)'
+ device: 'smartphone'
+ models:
+   - regex: '(GT6000)'
+     model: '$1'
+   - regex: 'Gretel; (A[67])'
+     model: '$1'
 
 # Kyowon
 Kyowon:
