--- a/Tests/fixtures/smartphone-24.yml
+++ b/Tests/fixtures/smartphone-24.yml
@@ -7091,3 +7091,221 @@
     model: G255
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.2.2; ru-ru; T200 Build/JDQ39) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30 Instagram 54.0.0.14.82 Android (17/4.2.2; 480dpi; 1080x1776; thl; T200; thl; mt6592; ru_RU; 117539703)
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 54.0.0.14.82
+  device:
+    type: smartphone
+    brand: ThL
+    model: T200
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.2.2; ru-ru; W867 Build/JDQ39) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30 Instagram 54.0.0.14.82 Android (17/4.2.2; 240dpi; 540x960; Haier; W867; W867; mt6582; ru_RU; 117539695)
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 54.0.0.14.82
+  device:
+    type: smartphone
+    brand: Haier
+    model: W867
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.3; ru-ru; Prime S Build/JLS36C) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Mobile Safari/534.30
+  os:
+    name: Android
+    version: "4.3"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "534.30"
+  device:
+    type: smartphone
+    brand: Highscreen
+    model: Prime S
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; JoyPRO Build/NRD90M; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/72.0.3626.105 Mobile Safari/537.36 Instagram 82.0.0.13.119 Android (24/7.0; 240dpi; 640x1208; Jinga; JoyPRO; JI55B_189BW; MT6737; ru_RU; 143631573)
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 82.0.0.13.119
+  device:
+    type: smartphone
+    brand: Jinga
+    model: Joy Pro
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; GT6000) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.102 YaBrowser/18.11.2.730.00 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 18.11.2.730.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Gretel
+    model: GT6000
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; A6 Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/44.0.2403.119 Mobile Safari/537.36 Instagram 88.0.0.14.99 Android (23/6.0; 320dpi; 720x1280; A6/Gretel; A6; h920be_v1_e_yx_a6e_gretel; mt6735; ru_RU; 149350058)
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 88.0.0.14.99
+  device:
+    type: smartphone
+    brand: Gretel
+    model: A6
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; A7 Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.157 Mobile Safari/537.36 Instagram 93.1.0.19.102 Android (23/6.0; 320dpi; 720x1184; Gretel; A7; A7; mt6580; ru_RU; 154400382)
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 93.1.0.19.102
+  device:
+    type: smartphone
+    brand: Gretel
+    model: A7
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; Fresh Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/53.0.2785.124 Mobile Safari/537.36 Instagram 83.0.0.20.111 Android (23/6.0; 320dpi; 720x1280; Jinga; Fresh; Fresh; mt6580; ru_RU; 144612578)
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 83.0.0.20.111
+  device:
+    type: smartphone
+    brand: Jinga
+    model: Fresh
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; London Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/44.0.2403.119 Mobile Safari/537.36 Instagram 87.0.0.18.99 Android (23/6.0; 320dpi; 720x1280; UMIDIGI; London; London; mt6580; ru_RU; 148324047)
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 87.0.0.18.99
+  device:
+    type: smartphone
+    brand: UMIDIGI
+    model: London
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; M3 Max Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/44.0.2403.125 Mobile Safari/537.36 Instagram 88.0.0.14.99 Android (23/6.0; 480dpi; 1080x1920; Meizu; M3 Max; M3Max; mt6755; ru_RU; 149350061)
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 88.0.0.14.99
+  device:
+    type: smartphone
+    brand: Meizu
+    model: M3 Max
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; M445 Build/MRA58K; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/69.0.3497.100 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 69.0.3497.100
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: DEXP
+    model: Ixion M445 Onyx 2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; A450) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 YaBrowser/19.1.3.198.00 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 19.1.3.198.00
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Jinga
+    model: A450
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; A239s) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.105 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 72.0.3626.105
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Beeline
+    model: Smart 8 A239s
+  os_family: Android
+  browser_family: Chrome
