--- a/Tests/fixtures/tablet-5.yml
+++ b/Tests/fixtures/tablet-5.yml
@@ -8733,3 +8733,38 @@
     model: Aplay 3
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.1; APLAY4) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.96 Safari/537.36
+  os:
+    name: Android
+    version: 7.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 78.0.3904.96
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: 3GO
+    model: Aplay 4
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 4.3; ru-ru; P330X Build/JLS36C) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 Safari/534.30 Instagram 54.0.0.14.82 Android (18/4.3; 160dpi; 600x976; TCL; P330X; Pop7_LTE; qcom; ru_RU; 117539687)
+  os:
+    name: Android
+    version: "4.3"
+    platform: ""
+  client:
+    type: mobile app
+    name: Instagram App
+    version: 54.0.0.14.82
+  device:
+    type: tablet
+    brand: Alcatel
+    model: One Touch POP 7S
+  os_family: Android
+  browser_family: Unknown
+
