--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10841,8 +10841,10 @@ Meizu:
     - regex: 'M721C(?:[);/ ]|$)'
       model: 'M6 Note'
       device: 'phablet'
-    - regex: '(M6T|MX6|M3E|M3S|M3X)(?:[);/ ]|$)'
+    - regex: '(M6T|MX6|M3E|M3X)(?:[);/ ]|$)'
       model: '$1'
+    - regex: '(?:MZ-)?M3S(?:[);/ ]|$)'
+      model: 'M3s'
     - regex: 'M5S|M612C'
       model: 'M5S'
     - regex: '(M04[05]|MX[ -]?2)(?:[);/ ]|$)'
@@ -23294,13 +23296,13 @@ Greentel:
 
 # Gretel:
 Gretel:
- regex: 'Gretel|(?:GT6000)(?:[);/ ]|$)'
- device: 'smartphone'
- models:
-   - regex: '(GT6000)'
-     model: '$1'
-   - regex: 'Gretel; (A[67])'
-     model: '$1'
+  regex: 'Gretel|(?:GT6000)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: '(GT6000)'
+      model: '$1'
+    - regex: 'Gretel; (A[67])'
+      model: '$1'
 
 # Kyowon
 Kyowon:
