feat(device) detect brand Vivo models: V17 (1919), Y51s (V2031), Y12s (V2033), Y51 (V2035), Y50 (1935), Z1 Pro (1951) feat(device) renamed H40 Lite model to Infinity H40 Lite for the Hisense brand feat(test) adds test: Samsung Galaxy S20+ 5G (SM-G986U)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -3126,7 +3126,7 @@ VGO TEL:
 
 # Vivo (vivo.com.cn, vivo.com)
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0268]|V2031[E]?A|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|V206[16]|V2037)(?:[);/ ]|$)'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|(?:V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[3469][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A|V2006|1819|V201[12]A|V202[0345]C?A|V202[235-9]|V205[47]A|V203[0235-8]|V2031[E]?A?|V203[46]A|V204[013]|V204[6789]A|V20(6[158]|99|5[56]|66[B]?|7[23]|80)A|V2046|X50 Pro\+|I1927|V206[16])(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A(?:[);/ ]|$)'
@@ -3223,7 +3223,7 @@ Vivo:
       model: 'V17 Pro'
     - regex: 'vivo 1907(?:_19)?(?:[);/ ]|$)'
       model: 'V17 Neo'
-    - regex: 'vivo 1920(?:[);/ ]|$)'
+    - regex: 'vivo 19(?:20|19)(?:[);/ ]|$)'
       model: 'V17'
     - regex: 'vivo 1933(?:[);/ ]|$)'
       model: 'V19'
@@ -3329,10 +3329,12 @@ Vivo:
       model: 'Y31s'
     - regex: 'V1934A(?:[);/ ]|$)'
       model: 'Y5s'
-    - regex: 'V1965A(?:[);/ ]|$)'
+    - regex: '(?:V1965A|vivo 1935)(?:[);/ ]|$)'
       model: 'Y50'
-    - regex: 'V2030(?:[);/ ]|$)'
+    - regex: 'V203[05](?:[);/ ]|$)'
       model: 'Y51'
+    - regex: 'V2031(?:[);/ ]|$)'
+      model: 'Y51s'
     - regex: 'V2054A(?:[);/ ]|$)'
       model: 'Y31s'
     - regex: 'V2057A(?:[);/ ]|$)'
@@ -3377,7 +3379,7 @@ Vivo:
       model: 'Y91'
     - regex: 'V1945A(?:[);/ ]|$)'
       model: 'Y9s'
-    - regex: 'V2026(?:[);/ ]|$)'
+    - regex: '(?:V2026|V2033)(?:[);/ ]|$)'
       model: 'Y12s'
     - regex: 'vivo 18(16|20)(?:[);/ ]|$)'
       model: 'Y91i'
@@ -3391,7 +3393,7 @@ Vivo:
       model: 'Y97'
     - regex: 'V1801A0(?:[);/ ]|$)'
       model: 'Z1'
-    - regex: 'vivo 1918(?:[);/ ]|$)'
+    - regex: 'vivo (?:1918|1951)(?:[);/ ]|$)'
       model: 'Z1 Pro'
     - regex: 'V1730D[AT](?:[);/ ]|$)'
       model: 'Z1i'
@@ -6825,8 +6827,8 @@ Hisense:
       model: 'H20'
     - regex: 'HLTE500T(?:[);/ ]|$)'
       model: 'H11'
-    - regex: 'HLTE230E(?:[);/ ]|$)'
-      model: 'H40 Lite'
+    - regex: '(?:HLTE230E|Infinity H40 Lite)(?:[);/ ]|$)'
+      model: 'Infinity H40 Lite'
     - regex: 'HLTE720T(?:[);/ ]|$)'
       model: 'U30'
       device: 'phablet'
