--- a/Tests/fixtures/smartphone-22.yml
+++ b/Tests/fixtures/smartphone-22.yml
@@ -2534,7 +2534,7 @@
   device:
     type: smartphone
     brand: Hisense
-    model: H40 Lite
+    model: Infinity H40 Lite
   os_family: Android
   browser_family: Chrome
 -
@@ -10174,5 +10174,23 @@
     type: smartphone
     brand: Tecno Mobile
     model: Camon 17P
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 11; Hisense Infinity H40 Lite) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.210 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "11"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 90.0.4430.210
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Hisense
+    model: Infinity H40 Lite
   os_family: Android
   browser_family: Chrome
