--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7640,7 +7640,7 @@ Hyundai:
       model: 'L503F Plus'
     - regex: 'L503F Plus'
       model: 'L503F Plus'
-    - regex: '(?:Hyundai_)?(Eternity_G57L)'
+    - regex: '(?:Hyundai_)?(Eternity_(?:G57L|G60))'
       model: '$1'
 
     # explicit tables models
@@ -18849,7 +18849,7 @@ ZTE:
       model: 'Blade 20 Smart'
     - regex: '902ZT(?:[);/ ]|$)'
       model: 'Axon 10 Pro 5G'
-    - regex: 'A2021(?:[);/ ]|$)'
+    - regex: 'A2021L?(?:[);/ ]|$)'
       model: 'Axon 11 5G'
     - regex: 'N799D(?:[);/ ]|$)'
       model: 'Blade Eg'
@@ -19247,6 +19247,13 @@ ZTE:
       model: 'Vergatario 5 Plus'
     - regex: 'ZTE V5 PRO(?:[);/ ]|$)'
       model: 'V5 Pro'
+
+    - regex: 'A2121L(?:[);/ ]|$)'
+      device: 'phablet'
+      model: 'Axon 20 5G'
+    - regex: 'ZTE 8010'
+      device: 'phablet'
+      model: 'Blade V2020 Smart'
 
     # explicit tablet models
     - regex: 'K83CA(?:[);/ ]|$)'
