feat(device) detect brand Motorola model: Moto E6s feat(device) detect brand Lenovo model:Tab E7 (TB-7104F)
feat(device) added tests: Motorola Moto G7 Plus, Huawei Y7 (2018) (LDN-LX3), Nokia 5 (TA-1027)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9442,7 +9442,7 @@ Lenovo:
     - regex: 'TB-X705F(?:[);/ ]|$)'
       model: 'Tab P10'
       device: 'tablet'
-    - regex: 'TB-7104I(?:[);/ ]|$)'
+    - regex: 'TB-7104[IF](?:[);/ ]|$)'
       model: 'Tab E7'
       device: 'tablet'
     - regex: 'TB-8304F1(?:[);/ ]|$)'
@@ -11332,6 +11332,8 @@ Motorola:
       model: 'Moto E6 Play'
     - regex: 'Moto E\(?([67])\)?(?:[);/ ]|$)'
       model: 'Moto E$1'
+    - regex: 'Moto E\(?([67])s\)?(?:[);/ ]|$)'
+      model: 'Moto E$1s'
     - regex: '(?:MOT-|Motorola-)?XT1030'
       model: 'Droid Mini'
     - regex: '(?:MOT-|Motorola-)?XT1096'
