feat(device) detect brand Huawei models: P9 Lite (VNS-L53, VNS-L23) feat(device) detect brand NYX Mobile model: Glam feat(device) detect brand Sharp model: Aquos Sense 4 (SH-41A) feat(device) detect brand Realme models: 8 5G (RMX3241), Narzo 30 5G (RMX3242)
feat(device) added tests: Xiaomi Redmi Note 9S, Huawei P30 (ELE-L04), Huawei Y7 Prime (2018) (TRT-L53),
 Huawei P smart (FIG-LX3), ZTE Blade V8 SE, Samsung Galaxy A20 (SM-A205FN)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7369,7 +7369,7 @@ Huawei:
       model: 'P8 Lite (2017)'
     - regex: 'EVA-(?:AL[10]0|L[012]9|[TCD]L00)(?:[);/ ]|$)'
       model: 'P9'
-    - regex: 'VNS-L(?:[23]1|[26]2)(?:[);/ ]|$)'
+    - regex: 'VNS-L(?:[23]1|[26]2|53|23)(?:[);/ ]|$)'
       model: 'P9 Lite'
     - regex: 'SLA-L(?:02|03|22|23)(?:[);/ ]|$)'
       model: 'P9 Lite Mini'
@@ -11971,7 +11971,7 @@ NUU Mobile:
 
 # NYX Mobile
 NYX Mobile:
-  regex: 'NYX[ _]'
+  regex: 'NYX[ _]|(?:GLAM)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'NYX_A1'
@@ -12012,6 +12012,8 @@ NYX Mobile:
       model: 'Vox'
     - regex: 'NYX_ZEUZ_HD'
       model: 'Zeus HD'
+    - regex: 'GLAM'
+      model: 'Glam'
 
 # Nous
 Nous:
@@ -12341,7 +12343,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[012]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|[36]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|91))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
+  regex: 'Realme[ _]|(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1|73)|20(?:[025-7]1|[037]2|2[57]|63|7[56]|8[156]|[2-5]0)|21(?:0[13]|17|[12]1|4[24]|5[15]|6[13]|7[036]|8[059]|9[35])|220[012]|18(0[13579]|11|3[13]|2[157]|[45]1|45)|32(?:01|42|[346]1)|30(?:[348]1|9[23]|63|85)|31(?:2[12]|91))|(?:OPPO[ _]?)?CPH1861)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861(?:[);/ ]|$)'
@@ -12398,6 +12400,8 @@ Realme:
       model: '8 Pro'
     - regex: 'RMX3085'
       model: '8'
+    - regex: 'RMX3241'
+      model: '8 5G'
     - regex: 'RMX1925(?:[);/ ]|$)'
       model: '5S'
     - regex: 'RMX1811(?:[);/ ]|$)'
@@ -12434,6 +12438,8 @@ Realme:
       model: 'Narzo 20'
     - regex: 'RMX2050(?:[);/ ]|$)'
       model: 'Narzo 20A'
+    - regex: 'RMX3242'
+      model: 'Narzo 30 5G'
     - regex: 'RMX1831(?:[);/ ]|$)'
       model: 'U1'
     - regex: 'RMX(?:20(?:51|[2]5)|2144)(?:[);/ ]|$)'
@@ -15623,6 +15629,8 @@ Sharp:
       model: 'Aquos Sense Plus'
     - regex: 'A003SH(?:[);/ ]|$)'
       model: 'Aquos Sense 4 Basic'
+    - regex: 'SH-41A(?:[);/ ]|$)'
+      model: 'Aquos Sense 4'
     - regex: '(?:SHG03|A004SH|SH-M17)(?:[);/ ]|$)'
       model: 'Aquos Sense 5G'
     - regex: 'SH-D01(?:[);/ ]|$)'
