feat(device) detect brand Oppo model: A93 (CPH2123) feat(device) detect brand ZTE model: Blade V2020 (9000) feat(device) detect brand Hyundai model: Eternity G57 feat(device) detect brand LG models: K56 (LM-K525), K56 Plus (LM-K526) feat(device) detect brand Motorola models: Moto Z3 Play, Moto Z3, One Vision Plus feat(device) detect brand Lenovo models: K13 Note, K10 Note feat(device) detect brand Xiaomi models: MI 10 Pro, MI 10T 5G
feat(test) added tests: Nokia 6 (TA-1039), Motorola Moto X Play, Motorola Moto G Play,
 Motorola Moto G8 Power, Huawei Mate 20 Lite (SNE-LX3), Motorola Moto G9 Plus,
 Xiaomi Mi 10, Xiaomi Mi 5, Xiaomi Mi 5s, Motorola Moto G8 Play

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7640,7 +7640,7 @@ Hyundai:
       model: 'L503F Plus'
     - regex: 'L503F Plus'
       model: 'L503F Plus'
-    - regex: '(?:Hyundai_)?(Eternity_(?:G57L|G60))'
+    - regex: '(?:Hyundai_)?(Eternity_(?:G57L?|G60))'
       model: '$1'
 
     # explicit tables models
@@ -9573,6 +9573,8 @@ Lenovo:
       model: 'C2'
     - regex: '(?:k50a40|K50-t5)(?:[);/ ]|$)'
       model: 'K3 Note'
+    - regex: 'K(1[30]) Note(?:[);/ ]|$)'
+      model: 'K$1 Note'
     - regex: 'A7010a48(?:[);/ ]|$)'
       model: 'K4 Note'
     - regex: 'K350t(?:[);/ ]|$)'
@@ -10119,6 +10121,10 @@ LG:
       model: 'K51S'
     - regex: 'LM-K520(?:[);/ ]|$)'
       model: 'K52'
+    - regex: 'LM-K525(?:[);/ ]|$)'
+      model: 'K56'
+    - regex: 'LM-K526(?:[);/ ]|$)'
+      model: 'K56 Plus'
     - regex: 'LM-Q510N(?:[);/ ]|$)'
       model: 'Q51'
     - regex: 'LM-Q630N?(?:[);/ ]|$)'
@@ -11356,7 +11362,7 @@ Motorola:
       model: 'Moto G7 Plus'
     - regex: '(?:MOT-|Motorola-)?XT10(?:49|5[23568]|60|9[23457])'
       model: 'Moto X'
-    - regex: '(?:MOT-|Motorola-)?XT156[23]'
+    - regex: '(?:MOT-|Motorola-)?XT156[23]|Moto X Play(?:[);/ ]|$)'
       model: 'Moto X Play'
     - regex: '(?:MOT-|Motorola-)?XT1572'
       model: 'Moto X Style'
@@ -11372,7 +11378,7 @@ Motorola:
       model: 'Moto Z2 Play'
     - regex: '(?:MOT-|Motorola-)?XT1789-05'
       model: 'Moto Z2 Force'
-    - regex: '(?:MOT-|Motorola-)?XT1929-15'
+    - regex: '(?:MOT-|Motorola-)?XT1929-15|moto z3(?:[);/ ]|$)'
       model: 'Moto Z3'
     - regex: '(?:MOT-|Motorola-)?XT1663'
       model: 'Moto M'
@@ -11386,6 +11392,8 @@ Motorola:
       model: 'Edge Plus'
     - regex: '(?:MOT-|Motorola-)?edge'
       model: 'Edge'
+    - regex: '(?:MOT-|Motorola-)?one vision plus'
+      model: 'One Vision Plus'
     - regex: '(?:MOT-|Motorola-)?(?:XT1970-5|one vision)'
       model: 'One Vision'
     - regex: '(?:MOT-|Motorola-)?one power'
@@ -12557,7 +12565,7 @@ OPPO:
       model: 'A92'
     - regex: 'PDKT00(?:[);/ ]|$)'
       model: 'A92s'
-    - regex: '(?:PEH[MT]00|CPH2121)(?:[);/ ]|$)'
+    - regex: '(?:PEH[MT]00|CPH212[13])(?:[);/ ]|$)'
       model: 'A93'
     - regex: 'PDKM00(?:[);/ ]|$)'
       model: 'A93s'
@@ -17834,14 +17842,16 @@ Xiaomi:
       model: 'MI CC 9'
     - regex: 'Xiaomi_M2001J2E_TD-LTE(?:[);/ ]|$)'
       model: 'MI 10'
+    - regex: 'Mi 10 Pro(?:[);/ ]|$)'
+      model: 'MI 10 Pro'
     - regex: 'M2011K2[CG](?:[);/ ]|$)'
       model: 'MI 11'
-    - regex: 'M2007J3S[CYP](?:[);/ ]|$)'
-      model: 'MI 10T 5G'
     - regex: 'M2007J3S[GI](?:[);/ ]|$)'
       model: 'MI 10T Pro 5G'
     - regex: 'M2007J17G(?:[);/ ]|$)'
       model: 'MI 10T Lite 5G'
+    - regex: '(?:M2007J3S[CYP]|Mi 10T)(?:[);/ ]|$)'
+      model: 'MI 10T 5G'
     - regex: 'M2007J1SC(?:[);/ ]|$)'
       model: 'MI 10 Ultra 5G'
     - regex: 'M2102J2SC(?:[);/ ]|$)'
@@ -19257,6 +19267,8 @@ ZTE:
       model: 'Vergatario 5 Plus'
     - regex: 'ZTE V5 PRO(?:[);/ ]|$)'
       model: 'V5 Pro'
+    - regex: 'ZTE 9000'
+      model: 'Blade V2020'
 
     - regex: 'A2121L(?:[);/ ]|$)'
       device: 'phablet'
