--- a/Tests/fixtures/smartphone-11.yml
+++ b/Tests/fixtures/smartphone-11.yml
@@ -7240,7 +7240,7 @@
   os_family: Android
   browser_family: Chrome
 - 
-  user_agent: 'Mozilla/5.0 (Linux; Android 10; RMX2001)  AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36'
+  user_agent: Mozilla/5.0 (Linux; Android 10; RMX2001) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
   os:
     name: Android
     version: "10"
