feat(device) detect brand Blu models: R2 Plus, R2 LTE, Pure View feat(device) detect brand Philips models: Xenium X818, Xenium X588, S395 feat(device) detect brand Phonemax model: Rocky 2 feat(device) detect brand Motorola models: Moto X Pure Edition (XT1575), Moto X Force (XT1580, XT1581), Droid Turbo 2 (XT1585), Moto Z (XT1650)
feat(device) rename Huawei PRA-LX2 and PRA-LX2 to Nova Lite

feat(device) add tests: Huawei Nova 2 (PIC-LX9), Huawei P10 Lite (WAS-LX2J), Sigma X-Treme PQ52, Sigma X-Treme PQ51

--- a/Tests/fixtures/smartphone-6.yml
+++ b/Tests/fixtures/smartphone-6.yml
@@ -7556,7 +7556,7 @@
   device:
     type: smartphone
     brand: Huawei
-    model: P8 Lite (2017)
+    model: Nova Lite
   os_family: Android
   browser_family: Chrome
 - 
