feat(device) detect brand Ulefone model: Note 7 feat(device) detect brand ZTE models: Axon 7 (A2017X), Blade L5 Plus (L0510)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -19077,7 +19077,7 @@ ZTE:
       model: 'Blade L3'
     - regex: 'ZTE[ _]T610(?:[);/ ]|$)'
       model: 'Blade L4'
-    - regex: 'Blade L5 Plus(?:[);/ ]|$)'
+    - regex: '(?:Blade L5 Plus|BLADE L0510)(?:[);/ ]|$)'
       model: 'Blade L5 Plus'
     - regex: 'Blade L5(?:[);/ ]|$)'
       model: 'Blade L5'
